--- a/nginx.yml
+++ b/nginx.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: nodehelloworld.example.com
+  name: nodenginx.example.com
   labels:
     app: helloworld
 spec:
