--- a/helloworld-secrets.yaml
+++ b/helloworld-secrets.yaml
@@ -4,6 +4,6 @@ metadata:
   name: db-secrets
 type: Opaque
 data: 
-  usename: admin
-  password: admin
+  usename: Admin@123
+  password: Admin@123
   
